- update uploaded files

--- a/fileupload/templates/fileupload/home.html
+++ b/fileupload/templates/fileupload/home.html
@@ -16,7 +16,7 @@
                 </ul>
                 <p>File Upload widget with multiple file selection for jQuery. Supports cross-domain, chunked and
                     resumable file uploads and works with Django.</p>
-                <input class="card text-white bg-success my-4" id="fileupload" type="file" name="files[]" multiple>
+                <input class="card text-white bg-success my-4" id="fileupload" type="file" name="files" multiple>
             </div>
             <div id="files" class="card-footer">
                 <ul>
