- form instance creation

--- a/fileupload/templates/base.html
+++ b/fileupload/templates/base.html
@@ -64,6 +64,6 @@ Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve you
 <script src="{% static 'js/vendor/jquery.ui.widget.js' %}"></script>
 <script src="{% static 'js/vendor/jquery.iframe-transport.js' %}"></script>
 <script src="{% static 'js/vendor/jquery.fileupload.js' %}"></script>
-<script src="{% static "js/file-upload.js" %}"></script>
+<script src="{% static "js/basic-upload.js" %}"></script>
 </body>
 </html>
