--- a/fileupload/templates/base.html
+++ b/fileupload/templates/base.html
@@ -12,7 +12,6 @@
     <title>jQuery-File-Upload on Django</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
           crossorigin="anonymous">
@@ -39,8 +38,15 @@ Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve you
             <li class="nav-item">
                 <a class="nav-link" href="#">Write</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{% url 'admin:index' %}"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Admin
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="{% url 'admin:fileupload_attachment_changelist' %}">Attachments</a>
+                    <a class="dropdown-item" href="#">Posts</a>
+                </div>
             </li>
         </ul>
     </div>
