--- a/fileupload/templates/base.html
+++ b/fileupload/templates/base.html
@@ -35,8 +35,15 @@ Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve you
     <a class="navbar-brand" href="#">jQFUD</a>
     <div class="collapse navbar-collapse" id="navbarToggler">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Write</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{% url 'admin:index' %}"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Blog
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="{% url 'post-list' %}">Posts</a>
+                    <a class="dropdown-item" href="#">Write</a>
+                </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="{% url 'admin:index' %}"
@@ -45,7 +52,7 @@ Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve you
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'admin:fileupload_attachment_changelist' %}">Attachments</a>
-                    <a class="dropdown-item" href="#">Posts</a>
+                    <a class="dropdown-item" href="{% url 'admin:fileupload_post_changelist' %}">Posts</a>
                 </div>
             </li>
         </ul>
