--- a/fileupload/templates/base.html
+++ b/fileupload/templates/base.html
@@ -42,7 +42,7 @@ Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve you
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'post-list' %}">Posts</a>
-                    <a class="dropdown-item" href="#">Write</a>
+                    <a class="dropdown-item" href="{% url 'post-create' %}">Write</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
