--- a/fileupload/templates/fileupload/post_create.html
+++ b/fileupload/templates/fileupload/post_create.html
@@ -7,10 +7,8 @@
                 <h2>Write a post</h2>
             </div>
             <div class="card-body">
-                <form action="" method="post">{% csrf_token %}
-                    {{ form.as_p }}
-                    <input type="submit" value="Save"/>
-                </form>
+                {% load crispy_forms_tags %}
+                {% crispy form %}
             </div>
         </div>
     </div>
