--- a/fileupload/templates/fileupload/post_create.html
+++ b/fileupload/templates/fileupload/post_create.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="card mt-4">
             <div class="card-header">
-                <h2>Write a post</h2>
+                <h2>Write a text post</h2>
             </div>
             <div class="card-body">
                 {% load crispy_forms_tags %}
