--- a/fileupload/templates/base.html
+++ b/fileupload/templates/base.html
@@ -17,6 +17,7 @@
           crossorigin="anonymous">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static "css/main.css" %}">
+    {% block stylesheet %}{% endblock %}
     <script src="{% static "js/vendor/modernizr-2.8.3-respond-1.4.2.min.js" %}"></script>
 </head>
 <body>
@@ -75,9 +76,6 @@ Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve you
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
         integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
-<script src="{% static 'js/vendor/jquery.ui.widget.js' %}"></script>
-<script src="{% static 'js/vendor/jquery.iframe-transport.js' %}"></script>
-<script src="{% static 'js/vendor/jquery.fileupload.js' %}"></script>
-<script src="{% static "js/basic-upload.js" %}"></script>
+{% block javascript %}{% endblock %}
 </body>
 </html>
