--- a/fileupload/templates/fileupload/home.html
+++ b/fileupload/templates/fileupload/home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block content %}
     <div class="container">
         <div class="card mt-4">
@@ -26,4 +28,11 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascript %}
+    <script src="{% static 'js/vendor/jquery.ui.widget.js' %}"></script>
+    <script src="{% static 'js/vendor/jquery.iframe-transport.js' %}"></script>
+    <script src="{% static 'js/vendor/jquery.fileupload.js' %}"></script>
+    <script src="{% static "js/basic-upload.js" %}"></script>
 {% endblock %}
