- post model slug field removed but created field added

--- a/fileupload/templates/fileupload/post_list.html
+++ b/fileupload/templates/fileupload/post_list.html
@@ -9,7 +9,7 @@
             <div class="card-body">
                 <ul>
                     {% for post in posts %}
-                        <li><a href="{% url 'post-detail' post.slug %}">{{ post.title }}</a></li>
+                        <li><a href="{% url 'post-detail' post.pk %}">{{ post.title }}</a></li>
                     {% empty %}
                         <li>No posts.</li>
                     {% endfor %}
