--- a/fileupload/templates/fileupload/post_detail.html
+++ b/fileupload/templates/fileupload/post_detail.html
@@ -7,7 +7,16 @@
                 <h2>{{ post.title }}</h2>
             </div>
             <div class="card-body">
-                {{ post.body }}
+                {{ post.body|linebreaks }}
+            </div>
+            <div class="card-footer">
+                <ul>
+                    {% for attachment in post.attachments.all %}
+                        <li><a href="{{ attachment.file.url }}">{{ attachment.file.name }}</a></li>
+                    {% empty %}
+                        <li>No files.</li>
+                    {% endfor %}
+                </ul>
             </div>
         </div>
     </div>
