--- a/fileupload/templates/fileupload/post_detail.html
+++ b/fileupload/templates/fileupload/post_detail.html
@@ -7,7 +7,7 @@
                 <h2>{{ post.title }}</h2>
             </div>
             <div class="card-body">
-                {{ post.body|linebreaks }}
+                {{ post.body|safe|linebreaks }}
             </div>
             <div class="card-footer">
                 <ul>
