--- a/fileupload/templates/base.html
+++ b/fileupload/templates/base.html
@@ -44,7 +44,7 @@ Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve you
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'post-list' %}">Posts</a>
                     <a class="dropdown-item" href="{% url 'post-create' %}">Write1</a>
-                    <a class="dropdown-item" href="{% url 'post-create' %}">Write2</a>
+                    <a class="dropdown-item" href="{% url 'post-create-2' %}">Write2</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
