--- a/fileupload/templates/fileupload/post_detail.html
+++ b/fileupload/templates/fileupload/post_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container">
-        <div class="card mt-4">
+        <div class="card my-4">
             <div class="card-header">
                 <h2>{{ post.title }}</h2>
             </div>
