--- a/sandbox/static/css/main.css
+++ b/sandbox/static/css/main.css
@@ -30,3 +30,7 @@ img {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }
+
+body > .container {
+  padding-bottom: 10px;
+}
