- view added for formset

--- a/fileupload/templates/base.html
+++ b/fileupload/templates/base.html
@@ -43,8 +43,9 @@ Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve you
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'post-list' %}">Posts</a>
-                    <a class="dropdown-item" href="{% url 'post-create' %}">Write1</a>
-                    <a class="dropdown-item" href="{% url 'post-create-2' %}">Write2</a>
+                    <a class="dropdown-item" href="{% url 'post-create' %}">Write Text</a>
+                    <a class="dropdown-item" href="{% url 'post-create-2' %}">Write Text (Formset)</a>
+                    <a class="dropdown-item" href="{% url 'post-create-3' %}">Write HTML</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
