--- a/fileupload/templates/fileupload/post_create3.html
+++ b/fileupload/templates/fileupload/post_create3.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="card mt-4">
             <div class="card-header">
-                <h2>Write a text post with inline formset</h2>
+                <h2>Write a HTML post</h2>
             </div>
             <div class="card-body">
                 {% load crispy_forms_tags %}
@@ -20,10 +20,15 @@
     </div>
 {% endblock %}
 
+{% block stylesheet %}
+    <link rel="stylesheet" href="{% static "css/vendor/summernote-bs4.css" %}">
+{% endblock %}
+
 {% block javascript %}
     <script src="{% static 'js/vendor/jquery.ui.widget.js' %}"></script>
     <script src="{% static 'js/vendor/jquery.iframe-transport.js' %}"></script>
     <script src="{% static 'js/vendor/jquery.fileupload.js' %}"></script>
     <script src="{% static 'js/csrf-cookie.js' %}"></script>
-    <script src="{% static "js/post-basic-upload.js" %}"></script>
+    <script src="{% static "js/vendor/summernote-bs4.js" %}"></script>
+    <script src="{% static "js/post-summernote.js" %}"> </script>
 {% endblock %}
