--- a/fileupload/templates/fileupload/post_create.html
+++ b/fileupload/templates/fileupload/post_create.html
@@ -10,7 +10,9 @@
             </div>
             <div class="card-body">
                 {% load crispy_forms_tags %}
-                {% crispy form %}
+                <form action="" method="post">
+                    {% crispy form %}
+                </form>
             </div>
             <div id="files" class="card-footer">
                 <ul>
