--- a/fileupload/templates/fileupload/post_create2.html
+++ b/fileupload/templates/fileupload/post_create2.html
@@ -13,6 +13,12 @@
                 <form method="post" enctype="multipart/form-data">
                     {% crispy form %}
                     {% crispy formset formset.form.helper %}
+                    <div class="form-group row">
+                        <div class="aab col-2 col-form-label"></div>
+                        <div class="col-10">
+                            <input name="submit" value="Write" class="btn btn-primary" type="submit">
+                        </div>
+                    </div>
                 </form>
             </div>
             <div id="files" class="card-footer">
